test/tests/compiler/18_structures/invalid_types/invalid_incomplete_structs/incomplete_return_type_funcall.plx
type struc s;

pub fn f(none) struc s;

pub fn main(none) i32 {
    f() #  can't call a function with an incomplete return type (besides void)
    return false
}
